Changed the App Header component to use flex instead of grid and fixed some layout issues. Updated the Edit Dashboard page to allow movement of goals based on the 'order' property of each goal and ordered dashboard goals based on that order

--- a/src/components/common/AppHeader/AppHeader.module.css
+++ b/src/components/common/AppHeader/AppHeader.module.css
@@ -1,37 +1,36 @@
 .header {
     width: 100%;
     height: 60px;
-    display: grid;
-    grid-template-columns: 1fr 100px;
-    grid-template-rows: 25px 35px;
-    flex-direction: column;
+    display: flex;
     flex-shrink: 0;
+}
+.header .headerText{
+    width: calc(100% - 50px);
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 }
 .header .date {
     color: rgba(255, 255, 255, 0.5);
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
     display: flex;
 }
 .header h3 {
     margin-top: 0;
-    grid-column: 1 / 2;
-    grid-row: 2 / 3;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
 }
-.header button,
-.header a,
-.header p {
-    grid-column: 2 / 3;
-    grid-row: 1 / 3;
+.header .buttonContainer{
+    width: 50px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.header .buttonContainer button{
     display: flex;
     align-items: center;
     height: 40px;
-    justify-content: flex-end;
     border: none;
-}
-.header button{
-    justify-content: center;
 }
